<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hosea.ochieng.journalapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1002"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_entry"
        android:orderInCategory="100"
        android:icon="@drawable/add_black_24dp"
        android:title="@string/action_add_entry_label"
        app:showAsAction="always" />
</menu>
