<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSelectedEntry">

    <GridLayout
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/large_margin"
        android:columnCount="2"
        android:rowCount="20">

        <ImageView
            android:id="@+id/detail_completedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_row="0"
            android:src="@drawable/star_cleared_24dp" />


        <TextView
            android:id="@+id/detail_entry_subject_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_row="1"
            android:text="Subject" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_row="1"
            android:text="@string/detail_subject_label" />

        <TextView
            android:id="@+id/detail_entry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="2"
            android:text="@string/action_edit_entry_label" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="2"
            android:text="@string/action_edit_entry_label" />


        <TextView
            android:id="@+id/detail_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="3"
            android:text="@string/new_entry_date_label" />

        <TextView

            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="3"
            android:text="@string/new_entry_date_label" />


        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="4"
            android:text="@string/detail_completed_label" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="4"
            android:text="@string/detail_status_label" />

        <Button
            android:id="@+id/detail_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:layout_row="7"
            android:text="@string/cancel_btn_label" />

        <Button
            android:id="@+id/detail_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_row="7"
            android:text="@string/action_edit_entry_label" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="6"
            android:paddingLeft="@dimen/fab_margin"
            >
            <TextView
                android:id="@+id/content_desc"
                android:layout_height="match_parent"
                android:layout_width="match_parent"

                android:text="@string/new_entry_content_label" />
        </ScrollView>

        <TextView

            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_row="5"
            android:text="@string/new_entry_content_label" />


    </GridLayout>
</ScrollView>